--- a/_principal.scss
+++ b/_principal.scss
@@ -99,6 +99,10 @@ main {
         margin-top: 3vh;
         padding: 0.75em;
         clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
+        -webkit-clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
+        -moz-clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
+        -ms-clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
+        -o-clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
         width: 100vw;
         height: 240vh;
         background-image: $color-obl;    
@@ -229,6 +233,10 @@ main {
         justify-content: space-evenly;
         align-items: center;
         clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
+        -webkit-clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
+        -moz-clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
+        -ms-clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
+        -o-clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
         background-image: $color-obl;
         height: 62vh;
         width: 100vw;
@@ -334,6 +342,10 @@ footer {
             display: -webkit-flex;
             flex-direction: column;
             clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
+            -webkit-clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
+            -moz-clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
+            -ms-clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
+            -o-clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
             margin-top: 0;
             height: 170vh;
 
@@ -493,7 +505,10 @@ footer {
         .novedades {
             justify-content: center;
             clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%);
-
+            -webkit-clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%);
+            -moz-clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%);
+            -ms-clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%);
+            -o-clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%);
             
             .tsec6 {
                 padding: 2em;
@@ -620,7 +635,6 @@ footer {
 
         .novedades {
             height: 70vh;
-            clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0% 100%);
         }
 
         .tsec6 {
@@ -654,6 +668,10 @@ footer {
         .episodios {
             height: 180vh;
             clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
+            -webkit-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
+            -moz-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
+            -ms-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
+            -o-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
 
             .tsec2 {
 
