--- a/_principal.scss
+++ b/_principal.scss
@@ -98,18 +98,22 @@ main {
     .episodios {
         margin-top: 3vh;
         padding: 0.75em;
-        clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
-        -webkit-clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
-        -moz-clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
-        -ms-clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
-        -o-clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
+        transform: skewY(-6deg);
+        -ms-transform: skewY(-6deg);
+        -webkit-transform: skewY(-6deg);
+        -moz-transform: skewY(-6deg);
+        -o-transform: skewY(-6deg);
         width: 100vw;
         height: 240vh;
         background-image: $color-obl;    
 
         .tsec2 {
             margin-top: 3vh;
-            
+            transform: skewY(6deg);
+            -ms-transform: skewY(6deg);
+            -webkit-transform: skewY(6deg);
+            -moz-transform: skewY(6deg);
+            -o-transform: skewY(6deg);
 
             h2 {
                 color: $color-contraste;
@@ -118,6 +122,11 @@ main {
 
         .spotify {
             padding: 0.25em 0;
+            transform: skewY(6deg);
+            -ms-transform: skewY(6deg);
+            -webkit-transform: skewY(6deg);
+            -moz-transform: skewY(6deg);
+            -o-transform: skewY(6deg);
 
             iframe {
                 width: 100%;
@@ -232,11 +241,11 @@ main {
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
-        clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
-        -webkit-clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
-        -moz-clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
-        -ms-clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
-        -o-clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
+        clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+        -webkit-clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+        -moz-clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+        -ms-clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+        -o-clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
         background-image: $color-obl;
         height: 62vh;
         width: 100vw;
@@ -341,18 +350,12 @@ footer {
             display: -ms-flexbox;
             display: -webkit-flex;
             flex-direction: column;
-            clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
-            -webkit-clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
-            -moz-clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
-            -ms-clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
-            -o-clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
             margin-top: 0;
             height: 170vh;
 
             .tsec2 {
                 margin-left: 7em;
-                margin-top: 13vh;
-                
+                margin-top: 13vh;          
             }
 
             .spotify {
@@ -415,6 +418,7 @@ footer {
 
                 h2 {
                     line-height: 12vh;
+                    width: max-content;
                 }
 
                 p {
@@ -666,28 +670,41 @@ footer {
     main {
 
         .episodios {
-            height: 180vh;
-            clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
-            -webkit-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
-            -moz-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
-            -ms-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
-            -o-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
+            height: 155vh;
+            transform: skewY(-5deg);
+            -ms-transform: skewY(-5deg);
+            -webkit-transform: skewY(-5deg);
+            -moz-transform: skewY(-5deg);
+            -o-transform: skewY(-5deg);
 
             .tsec2 {
+                margin-top: 2vh;
+                transform: skewY(5deg);
+                -ms-transform: skewY(5deg);
+                -webkit-transform: skewY(5deg);
+                -moz-transform: skewY(5deg);
+                -o-transform: skewY(5deg);
 
                 h2 {
                     padding: 1.5em 0 0 0;
                 }
             }
+            .spotify {
+                transform: skewY(5deg);
+                -ms-transform: skewY(5deg);
+                -webkit-transform: skewY(5deg);
+                -moz-transform: skewY(5deg);
+                -o-transform: skewY(5deg);
+            }
         }
 
         .historia {
-            height: 70vh;
+            height: 75vh;
 
             .phone {
-                transform: translateY(-30vh); 
-                -webkit-transform: translateY(-30vh); 
-                -ms-transform: translateY(-30vh); 
+                transform: translateY(-20vh); 
+                -webkit-transform: translateY(-20vh); 
+                -ms-transform: translateY(-20vh); 
 
                 img {
                     width: 32vw;
@@ -697,10 +714,16 @@ footer {
             .artsec3 {
                 width: 30vw;
                 margin-right: 15vw;
+                margin-top: 10vh;
                 padding: 0;
 
                 h2 {
+                    line-height: 18vh;
                     width: 45vw;
+                }
+
+                p {
+                    width: 36vw;
                 }
             }    
         }
