--- a/style.css
+++ b/style.css
@@ -207,20 +207,30 @@ main {
   main .episodios {
     margin-top: 3vh;
     padding: 0.75em;
-    clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
-    -webkit-clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
-    -moz-clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
-    -ms-clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
-    -o-clip-path: polygon(0 2%, 100% 0%, 100% 98%, 0% 100%);
+    transform: skewY(-6deg);
+    -ms-transform: skewY(-6deg);
+    -webkit-transform: skewY(-6deg);
+    -moz-transform: skewY(-6deg);
+    -o-transform: skewY(-6deg);
     width: 100vw;
     height: 240vh;
     background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%); }
     main .episodios .tsec2 {
-      margin-top: 3vh; }
+      margin-top: 3vh;
+      transform: skewY(6deg);
+      -ms-transform: skewY(6deg);
+      -webkit-transform: skewY(6deg);
+      -moz-transform: skewY(6deg);
+      -o-transform: skewY(6deg); }
       main .episodios .tsec2 h2 {
         color: #FFFFFF; }
     main .episodios .spotify {
-      padding: 0.25em 0; }
+      padding: 0.25em 0;
+      transform: skewY(6deg);
+      -ms-transform: skewY(6deg);
+      -webkit-transform: skewY(6deg);
+      -moz-transform: skewY(6deg);
+      -o-transform: skewY(6deg); }
       main .episodios .spotify iframe {
         width: 100%;
         margin: 0.2em 0 0.2em 0;
@@ -292,11 +302,11 @@ main {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
-    -webkit-clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
-    -moz-clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
-    -ms-clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
-    -o-clip-path: polygon(0 5%, 100% 0%, 100% 100%, 0% 100%);
+    clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+    -webkit-clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+    -moz-clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+    -ms-clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
+    -o-clip-path: polygon(0 10%, 100% 0%, 100% 100%, 0% 100%);
     background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
     height: 62vh;
     width: 100vw; }
@@ -368,11 +378,6 @@ footer {
     display: -ms-flexbox;
     display: -webkit-flex;
     flex-direction: column;
-    clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
-    -webkit-clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
-    -moz-clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
-    -ms-clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
-    -o-clip-path: polygon(0 10%, 100% 0%, 100% 90%, 0% 100%);
     margin-top: 0;
     height: 170vh; }
     main .episodios .tsec2 {
@@ -425,7 +430,8 @@ footer {
       margin-right: 5vw;
       padding: 1em 0; }
       main .historia .artsec3 h2 {
-        line-height: 12vh; }
+        line-height: 12vh;
+        width: max-content; }
       main .historia .artsec3 p {
         font-size: 0.80em;
         padding: 0.2em 0; }
@@ -582,28 +588,45 @@ footer {
   ------------------------------------------------------------------------- */
 @media screen and (min-width: 1200px) {
   main .episodios {
-    height: 180vh;
-    clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
-    -webkit-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
-    -moz-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
-    -ms-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
-    -o-clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%); }
-    main .episodios .tsec2 h2 {
-      padding: 1.5em 0 0 0; }
+    height: 155vh;
+    transform: skewY(-5deg);
+    -ms-transform: skewY(-5deg);
+    -webkit-transform: skewY(-5deg);
+    -moz-transform: skewY(-5deg);
+    -o-transform: skewY(-5deg); }
+    main .episodios .tsec2 {
+      margin-top: 2vh;
+      transform: skewY(5deg);
+      -ms-transform: skewY(5deg);
+      -webkit-transform: skewY(5deg);
+      -moz-transform: skewY(5deg);
+      -o-transform: skewY(5deg); }
+      main .episodios .tsec2 h2 {
+        padding: 1.5em 0 0 0; }
+    main .episodios .spotify {
+      transform: skewY(5deg);
+      -ms-transform: skewY(5deg);
+      -webkit-transform: skewY(5deg);
+      -moz-transform: skewY(5deg);
+      -o-transform: skewY(5deg); }
   main .historia {
-    height: 70vh; }
+    height: 75vh; }
     main .historia .phone {
-      transform: translateY(-30vh);
-      -webkit-transform: translateY(-30vh);
-      -ms-transform: translateY(-30vh); }
+      transform: translateY(-20vh);
+      -webkit-transform: translateY(-20vh);
+      -ms-transform: translateY(-20vh); }
       main .historia .phone img {
         width: 32vw; }
     main .historia .artsec3 {
       width: 30vw;
       margin-right: 15vw;
+      margin-top: 10vh;
       padding: 0; }
       main .historia .artsec3 h2 {
+        line-height: 18vh;
         width: 45vw; }
+      main .historia .artsec3 p {
+        width: 36vw; }
   main .invitados .fotos img {
     width: 33.33vw;
     height: 54vh; }
